--- a/ai-agent-station-app/pom.xml
+++ b/ai-agent-station-app/pom.xml
@@ -68,6 +68,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- 工程模块 -->
         <dependency>
