--- a/ai-agent-station-app/src/main/resources/application-dev.yml
+++ b/ai-agent-station-app/src/main/resources/application-dev.yml
@@ -17,7 +17,7 @@ spring:
   datasource:
     # MySQL配置
     mysql:
-      username:
+      username: root
       password:
       url: jdbc:mysql://localhost:3306/ai-agent-station?useUnicode=true&characterEncoding=utf8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai&useSSL=true
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -58,7 +58,7 @@ spring:
     agent:
       auto-config:
         enabled: true
-        client_id_list_expr: 3101,3102,3103,3104
+        agent_id_list_expr: 1,2
 
 # Redis 配置
 redis:
