feat: 集成Satoken框架，完善用户注册、登录等基本功能，修改对应节点，历史记录改为由会话标识获取

--- a/ai-agent-station-domain/pom.xml
+++ b/ai-agent-station-domain/pom.xml
@@ -70,6 +70,15 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.18</version>
+        </dependency>
         <!-- 系统模块 -->
         <dependency>
             <groupId>top.xiaoming-programming</groupId>
