--- a/ai-agent-station-trigger/pom.xml
+++ b/ai-agent-station-trigger/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
 
         <!-- 系统模块 -->
         <dependency>
